// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
<img
  alt="Item title"
  src="http://localhost:3000/something/@@images/image/preview"
/>
`;

exports[`PreviewImage renders a preview image as a background cover 1`] = `
<img
  alt="Item title"
  className="preview-image large"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  style={
    Object {
      "backgroundImage": "url(\\"http://localhost:3000/something/@@images/image/large\\")",
    }
  }
/>
`;

exports[`PreviewImage renders a preview image with custom size 1`] = `
<img
  alt="Item title"
  src="http://localhost:3000/something/@@images/image/large"
/>
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  src="http://localhost:3000/something/@@images/image/preview"
/>
`;
